cabal-version:   3.0
name:            block
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          shadowninja55
maintainer:      shadowninja1050@gmail.com

-- copyright:
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable block
  main-is:            Main.hs
  other-modules:
    Block.Camera
    Block.Game

  build-depends:
    , base          ^>=4.18.0.0
    , bytestring
    , generic-lens
    , GLUtil
    , lens
    , linear
    , mtl
    , OpenGL
    , sdl2
    , vector

  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DeriveGeneric
    ImplicitParams
    LambdaCase
    LexicalNegation
    OverloadedLabels
    OverloadedRecordDot

  ghc-options:        -Wall
